Intermediate broken state.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(
 	UHTTP_SOURCES
 	"src/server.c"
 	"src/client.c"
-)
+	"src/list.c")
 
 add_library(
 uhttp-shared
@@ -24,9 +24,17 @@ add_library(
 )
 target_include_directories(uhttp-static PUBLIC "inc" PRIVATE "src")
 
+add_executable(
+	uhttp-cli
+	${UHTTP_SOURCES}
+	"src/cli/main.c"
+)
+target_include_directories(uhttp-cli PRIVATE "inc" "src")
+
 if(WIN32)
 	find_library(WINSOCK2 "ws2_32.lib")
 	target_link_libraries(uhttp-shared ${WINSOCK2})
 	target_link_libraries(uhttp-static ${WINSOCK2})
+	target_link_libraries(uhttp-cli ${WINSOCK2})
 endif()
 
